# hypothesize-verify-engine

./: .gitignore  README.md  main.py  pyproject.toml
mvp/: agents.py  config.py  evaluation.py  main.py  utils.py
notebooks/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
scripts/: 01-build-dataset.py  02-build-retrieval-system-hybrid.py  03-build-contradictory-data.py
