[project]
name = "hypothesize-verify-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "chromadb>=1.0.20",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.181.0",
    "google-search-results>=2.4.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "llama-index>=0.12.52",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-huggingface>=0.5.0",
    "llama-index-retrievers-bm25>=0.5.2",
    "llama-index-vector-stores-chroma>=0.4.2",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "openai>=1.104.2",
    "pandas>=2.3.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "serpapi>=0.1.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
